--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,10 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y libudev-dev
       - name: Setup Rust toolchain and cache
         uses: actions-rust-lang/setup-rust-toolchain@v1.9.0
-      - name: cargo fmt
-        run: cargo fmt --all -- --check
-      - name: Run Clippy
-        run: cargo clippy --all-targets --all-features
+      #- name: cargo fmt
+      #  run: cargo fmt --all -- --check
+      #- name: Run Clippy
+      #  run: cargo clippy --all-targets --all-features
       - name: Build
         run: cargo build --verbose
       - name: Run Unit Tests
