--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ human-panic = "2.0.2"
 libc = "0.2.169"
 # log = "0.4.25"
 ratatui = "0.29.0"
+ratatui-macros = "0.6.0"
 rolling-file = "0.2.0"
 serde = { version = "1.0", features = ["derive"] }
 serialport = "4.7.0"
@@ -18,3 +19,4 @@ strip-ansi-escapes = "0.2.1"
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
+tui-input = "0.11.1"
