--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ color-eyre = "0.6.3"
 human-panic = "2.0.2"
 libc = "0.2.169"
 # log = "0.4.25"
-ratatui = "0.29.0"
+ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
 ratatui-macros = "0.6.0"
 rolling-file = "0.2.0"
 serde = { version = "1.0", features = ["derive"] }
