--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,11 @@ tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
 tui-input = "0.11.1"
 virtual-serialport = "0.1.3"
+
+# Enable when flamegraphing
+# [profile.release]
+# debug = true
+
+# Speeds up rendering operations for debug builds
+[profile.dev.package.ratatui]
+opt-level = 3
