--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+arboard = "3.4.1"
 better-panic = "0.3.0"
 chrono = "0.4.39"
 color-eyre = "0.6.3"
