--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ arboard = "3.4.1"
 better-panic = "0.3.0"
 chrono = "0.4.39"
 color-eyre = "0.6.3"
+derivative = "2.2.0"
 human-panic = "2.0.2"
 libc = "0.2.169"
 # log = "0.4.25"
