--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ rolling-file = "0.2.0"
 serde = { version = "1.0", features = ["derive"] }
 serialport = "4.7.0"
 strip-ansi-escapes = "0.2.1"
+takeable = "0.2.2"
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
