--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ takeable = "0.2.2"
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
+tui-big-text = "0.7.1"
 tui-input = "0.11.1"
 virtual-serialport = "0.1.3"
 
