--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,17 @@ color-eyre = "0.6.3"
 derivative = "2.2.0"
 enum-rotate = "0.1.1"
 human-panic = "2.0.2"
+int-enum = { git = "https://github.com/nullstalgia/int-enum-rs", branch = "feat/colors-and-discriminators" }
 libc = "0.2.169"
 # log = "0.4.25"
+# num_enum = "0.7.3"
 ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
 ratatui-macros = "0.6.0"
 rolling-file = "0.2.0"
 serde = { version = "1.0", features = ["derive"] }
 serialport = "4.7.0"
 strip-ansi-escapes = "0.2.1"
+strum = { version = "0.27", features = ["derive"] }
 takeable = "0.2.2"
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-appender = "0.2.3"
