--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "yap"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+default = []
+# TODO
+espflash = []
+
 [dependencies]
 arboard = "3.4.1"
 arc-swap = "1.7.1"
@@ -21,8 +26,9 @@ ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
 ratatui-macros = "0.6.0"
 rolling-file = "0.2.0"
 serde = { version = "1.0", features = ["derive"] }
-serialport = "4.7.0"
+serialport = { version = "4.7.0", features = ["serde"] }
 strip-ansi-escapes = "0.2.1"
+struct-table = { path = "struct-table" }
 strum = { version = "0.27", features = ["derive"] }
 takeable = "0.2.2"
 tracing = { version = "0.1.41", features = ["log"] }
