--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [features]
 default = []
 # TODO
-espflash = []
+espflash = ["dep:espflash"]
 
 [dependencies]
 ansi-to-tui = "7.0.0"
@@ -17,10 +17,11 @@ chrono = "0.4.39"
 color-eyre = "0.6.3"
 derivative = "2.2.0"
 enum-rotate = "0.1.1"
-espflash = "3.3.0"
+espflash = { version = "3.3.0", optional = true }
 human-panic = "2.0.2"
 int-enum = { git = "https://github.com/nullstalgia/int-enum-rs", branch = "feat/colors-and-discriminators" }
 libc = "0.2.169"
+memchr = "2.7.4"
 # log = "0.4.25"
 # num_enum = "0.7.3"
 ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
