--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ default = []
 espflash = ["dep:espflash"]
 
 [dependencies]
-ansi-to-tui = "7.0.0"
+ansi-to-tui = { path = "../ansi-to-tui" }
+# ansi-to-tui = "7.0.0"
 arboard = "3.4.1"
 arc-swap = "1.7.1"
 better-panic = "0.3.0"
@@ -20,6 +21,7 @@ enum-rotate = "0.1.1"
 espflash = { version = "3.3.0", optional = true }
 human-panic = "2.0.2"
 int-enum = { git = "https://github.com/nullstalgia/int-enum-rs", branch = "feat/colors-and-discriminators" }
+itertools = "0.14.0"
 libc = "0.2.169"
 memchr = "2.7.4"
 # log = "0.4.25"
@@ -33,11 +35,13 @@ strip-ansi-escapes = "0.2.1"
 struct-table = { path = "struct-table" }
 strum = { version = "0.27", features = ["derive"] }
 takeable = "0.2.2"
+textwrap = "0.16.2"
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
 tui-big-text = "0.7.1"
 tui-input = "0.11.1"
+unicode-width = "0.2.0"
 virtual-serialport = "0.1.3"
 
 # Enable when flamegraphing
