--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ color-eyre = "0.6.3"
 derivative = "2.2.0"
 enum-rotate = "0.1.1"
 espflash = { version = "3.3.0", optional = true }
+fs-err = "3.1.0"
 human-panic = "2.0.2"
 int-enum = { git = "https://github.com/nullstalgia/int-enum-rs", branch = "feat/colors-and-discriminators" }
 itertools = "0.14.0"
@@ -31,12 +32,15 @@ ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
 ratatui-macros = "0.6.0"
 rolling-file = "0.2.0"
 serde = { version = "1.0", features = ["derive"] }
+serde-inline-default = "0.2.3"
 serialport = { version = "4.7.0", features = ["serde"] }
+snailquote = "0.3.1"
 strip-ansi-escapes = "0.2.1"
 struct-table = { path = "struct-table" }
 strum = { version = "0.27", features = ["derive"] }
 takeable = "0.2.2"
 textwrap = "0.16.2"
+toml = "0.8.21"
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
