--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ chrono = "0.4.39"
 color-eyre = "0.6.3"
 derivative = "2.2.0"
 enum-rotate = "0.1.1"
+# enum_rotate = { path = "../enum-rotate" }
 espflash = { version = "3.3.0", optional = true }
 fs-err = "3.1.0"
 human-panic = "2.0.2"
@@ -26,6 +27,7 @@ int-enum = { git = "https://github.com/nullstalgia/int-enum-rs", branch = "feat/
 itertools = "0.14.0"
 libc = "0.2.169"
 memchr = "2.7.4"
+num-integer = "0.1.46"
 # log = "0.4.25"
 # num_enum = "0.7.3"
 ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
@@ -34,7 +36,6 @@ rolling-file = "0.2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde-inline-default = "0.2.3"
 serialport = { version = "4.7.0", features = ["serde"] }
-snailquote = "0.3.1"
 strip-ansi-escapes = "0.2.1"
 struct-table = { path = "struct-table" }
 strum = { version = "0.27", features = ["derive"] }
@@ -46,6 +47,7 @@ tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
 tui-big-text = "0.7.1"
 tui-input = "0.11.1"
+unescaper = "0.1.5"
 unicode-width = "0.2.0"
 virtual-serialport = "0.1.3"
 
