Avoid carousel panic-ing on shutdown if it's trying to send at the same time

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ struct-table = { path = "struct-table" }
 strum = { version = "0.27", features = ["derive"] }
 takeable = "0.2.2"
 textwrap = "0.16.2"
+thiserror = "2.0.12"
 toml = "0.8.21"
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-appender = "0.2.3"
