--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,9 @@ virtual-serialport = "0.1.3"
 # [profile.release]
 # debug = true
 
+# [profile.release]
+# lto = true
+
 # Speeds up rendering operations for debug builds
 [profile.dev.package.ratatui]
 opt-level = 3
