--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ arc-swap = "1.7.1"
 better-panic = "0.3.0"
 chrono = "0.4.39"
 color-eyre = "0.6.3"
+compact_str = "0.9.0"
 crokey = { version = "1.1.2", features = ["serde"] }
 # crokey = { path = "../crokey", features = ["serde"] }
 derivative = "2.2.0"
