--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,8 @@ enum-rotate = "0.1.1"
 espflash = { version = "3.3.0", optional = true, features = ["serialport"] }
 fs-err = "3.1.0"
 human-panic = "2.0.2"
-int-enum = { git = "https://github.com/nullstalgia/int-enum-rs", branch = "feat/colors-and-discriminators" }
+# int-enum = { git = "https://github.com/nullstalgia/int-enum-rs", branch = "feat/colors-and-discriminators" }
+int-enum = "1.2.0"
 itertools = "0.14.0"
 libc = "0.2.169"
 memchr = "2.7.4"
