--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ strum = { version = "0.27", features = ["derive"] }
 takeable = "0.2.2"
 textwrap = "0.16.2"
 thiserror = "2.0.12"
+tinyvec = { version = "1.9.0", features = ["std"] }
 toml = "0.8.21"
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-appender = "0.2.3"
