--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ ansi-to-tui = { git = "https://github.com/nullstalgia/ansi-to-tui", branch = "lo
 arboard = "3.4.1"
 arc-swap = "1.7.1"
 better-panic = "0.3.0"
+bstr = "1.12.0"
 chrono = "0.4.39"
 color-eyre = "0.6.3"
 compact_str = "0.9.0"
@@ -25,6 +26,7 @@ enum-rotate = "0.1.1"
 # enum_rotate = { path = "../enum-rotate" }
 espflash = { version = "3.3.0", optional = true, features = ["serialport"] }
 fs-err = "3.1.0"
+hex = "0.4.3"
 human-panic = "2.0.2"
 # int-enum = { git = "https://github.com/nullstalgia/int-enum-rs", branch = "feat/colors-and-discriminators" }
 int-enum = "1.2.0"
