--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ better-panic = "0.3.0"
 bstr = "1.12.0"
 chrono = "0.4.39"
 color-eyre = "0.6.3"
-compact_str = "0.9.0"
+compact_str = { version = "0.9.0", features = ["serde"] }
 crokey = { version = "1.1.2", features = ["serde"] }
 # crokey = { path = "../crokey", features = ["serde"] }
 derivative = "2.2.0"
@@ -28,6 +28,7 @@ espflash = { version = "3.3.0", optional = true, features = ["serialport"] }
 fs-err = "3.1.0"
 hex = "0.4.3"
 human-panic = "2.0.2"
+indexmap = { version = "2.9.0", features = ["serde"] }
 # int-enum = { git = "https://github.com/nullstalgia/int-enum-rs", branch = "feat/colors-and-discriminators" }
 int-enum = "1.2.0"
 itertools = "0.14.0"
@@ -55,7 +56,7 @@ tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
 tui-big-text = "0.7.1"
 tui-input = "0.11.1"
-unescaper = "0.1.5"
+# unescaper = "0.1.5"
 unicode-width = "0.2.0"
 virtual-serialport = "0.1.3"
 
