--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 default = []
 # TODO
 espflash = ["dep:espflash"]
+# TODO
+portable = []
 
 [dependencies]
 ansi-to-tui = { git = "https://github.com/nullstalgia/ansi-to-tui", branch = "lossy_and_line_endings" }
@@ -16,12 +18,14 @@ arboard = "3.4.1"
 arc-swap = "1.7.1"
 better-panic = "0.3.0"
 bstr = "1.12.0"
+camino = { version = "1.1.9", features = ["serde1"] }
 chrono = "0.4.39"
 color-eyre = "0.6.3"
 compact_str = { version = "0.9.0", features = ["serde"] }
 crokey = { version = "1.1.2", features = ["serde"] }
 # crokey = { path = "../crokey", features = ["serde"] }
 derivative = "2.2.0"
+directories = "6.0.0"
 enum-rotate = "0.1.1"
 # enum_rotate = { path = "../enum-rotate" }
 espflash = { version = "3.3.0", optional = true, features = ["serialport"] }
