--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,8 @@ num-integer = "0.1.46"
 # num_enum = "0.7.3"
 ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
 ratatui-macros = "0.6.0"
+regex = "1.11.1"
+# regex-lite = "0.1.6"
 rolling-file = "0.2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde-inline-default = "0.2.3"
