--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
-default = []
+default = ["espflash"]
 # TODO
 espflash = ["dep:espflash"]
 # TODO
@@ -74,5 +74,5 @@ virtual-serialport = "0.1.3"
 # lto = true
 
 # Speeds up rendering operations for debug builds
-[profile.dev.package.ratatui]
-opt-level = 3
+# [profile.dev.package.ratatui]
+# opt-level = 3
