--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,8 @@ derivative = "2.2.0"
 directories = "6.0.0"
 enum-rotate = "0.1.1"
 # enum_rotate = { path = "../enum-rotate" }
-espflash = { version = "3.3.0", optional = true, features = ["serialport"] }
+# espflash = { version = "3.3.0", optional = true, features = ["serialport"] }
+espflash = { path = "../espflash/espflash", optional = true, features = ["serialport"] }
 fs-err = "3.1.0"
 hex = "0.4.3"
 human-panic = "2.0.2"
@@ -74,5 +75,5 @@ virtual-serialport = "0.1.3"
 # lto = true
 
 # Speeds up rendering operations for debug builds
-# [profile.dev.package.ratatui]
-# opt-level = 3
+[profile.dev.package.ratatui]
+opt-level = 3
