Allow marking macros as sensitive to hide content in preview and buffer

--- a/example_macros/openshock_setup.toml
+++ b/example_macros/openshock_setup.toml
@@ -16,10 +16,12 @@ content = "keepalive false"
 [[macro]]
 name = "Setup Authtoken"
 content = "authtoken "
+sensitive = true
 
 [[macro]]
 name = "Setup Networks"
 content = "networks "
+sensitive = true
 
 [[macro]]
 name = "CaiX Vib (ID 12345, 0.5s)"
