--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ chrono = "0.4.39"
 color-eyre = "0.6.3"
 compact_str = { version = "0.9.0", features = ["serde"] }
 crokey = { version = "1.1.2", features = ["serde"] }
+crossbeam = "0.8.4"
 # crokey = { path = "../crokey", features = ["serde"] }
 derivative = "2.2.0"
 directories = "6.0.0"
