--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,10 @@ tui-input = "0.11.1"
 unicode-width = "0.2.0"
 virtual-serialport = "0.1.3"
 
+
+[dev-dependencies]
+enable-ansi-support = "0.2.1"
+
 # Enable when flamegraphing
 # [profile.release]
 # debug = true
