--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ default = ["macros","espflash","defmt"]
 # Allow flashing ESP32 targets with binary and ELF files
 espflash = ["dep:espflash"]
 logging = []
-defmt = ["dep:defmt-decoder", "dep:defmt-parser"]
+defmt = ["dep:defmt-decoder", "dep:defmt-parser", "dep:ratatui-explorer", "dep:md5"]
 macros = []
 portable = []
 
@@ -45,12 +45,14 @@ indexmap = { version = "2.9.0", features = ["serde"] }
 int-enum = "1.2.0"
 itertools = "0.14.0"
 libc = "0.2.169"
+md5 = { version = "0.8.0", optional = true }
 memchr = "2.7.4"
 nom = "7.1"
 num-integer = "0.1.46"
 # log = "0.4.25"
 # num_enum = "0.7.3"
 ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
+ratatui-explorer = { version = "0.2.1", optional = true }
 ratatui-macros = "0.6.0"
 regex = "1.11.1"
 # regex-lite = "0.1.6"
