--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,18 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
-default = ["macros","espflash","defmt"]
+default = ["macros", "espflash", "defmt_watch"]
 # Allow flashing ESP32 targets with binary and ELF files
 espflash = ["dep:espflash"]
 logging = []
-defmt = ["dep:defmt-decoder", "dep:defmt-parser", "dep:ratatui-explorer", "dep:md5"]
+defmt = [
+    "dep:defmt-decoder",
+    "dep:defmt-parser",
+    "dep:ratatui-explorer",
+    "dep:md5",
+    "dep:notify",
+]
+defmt_watch = ["defmt", "dep:notify"]
 macros = []
 portable = []
 
@@ -36,7 +43,9 @@ enum-rotate = "0.1.1"
 # enum_rotate = { path = "../enum-rotate" }
 # espflash = { version = "3.3.0", optional = true, features = ["serialport"] }
 # espflash = { path = "../espflash/espflash", optional = true, features = ["serialport"] }
-espflash = { git = "https://github.com/nullstalgia/espflash", branch = "public_verify_and_skip", optional = true, default-features = false, features = ["serialport"] }
+espflash = { git = "https://github.com/nullstalgia/espflash", branch = "public_verify_and_skip", optional = true, default-features = false, features = [
+    "serialport",
+] }
 fs-err = "3.1.0"
 hex = "0.4.3"
 human-panic = "2.0.2"
@@ -48,6 +57,9 @@ libc = "0.2.169"
 md5 = { version = "0.8.0", optional = true }
 memchr = "2.7.4"
 nom = "7.1"
+notify = { version = "8.0.0", features = [
+    "crossbeam-channel",
+], optional = true }
 num-integer = "0.1.46"
 # log = "0.4.25"
 # num_enum = "0.7.3"
