Support defmt when logging!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
-default = ["macros", "espflash", "defmt_watch"]
+default = ["macros", "espflash", "defmt_watch", "logging"]
 # Allow flashing ESP32 targets with binary and ELF files
 espflash = ["dep:espflash"]
 logging = []
