--- a/example_configs/yap_keybinds.toml
+++ b/example_configs/yap_keybinds.toml
@@ -9,7 +9,8 @@ ctrl-t = "toggle-timestamps"
 ctrl-m = "show-macros"
 ctrl-b = "show-behavior"
 'ctrl-.' = "show-portsettings"
-ctrl-d = "toggle-indices"
+# ctrl-d = "toggle-indices"
+ctrl-d = "show-defmt"
 ctrl-f = "reload-colors"
 F20 = "esp-hard-reset"
 F21 = "esp-bootloader"
@@ -17,7 +18,7 @@ shift-F21 = "esp-bootloader-unchecked"
 ctrl-z = "esp-bootloader-unchecked"
 ctrl-r = "show-rendering"
 ctrl-h = "toggle-hex"
-ctrl-l = "show-losgging"
+ctrl-l = "show-logging"
 ctrl-k = "show-keybinds"
 
 # macros
