--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ better-panic = "0.3.0"
 bstr = "1.12.0"
 camino = { version = "1.1.9", features = ["serde1"] }
 chrono = "0.4.39"
+clap = { version = "4.5.40", features = ["derive"] }
 color-eyre = "0.6.3"
 compact_str = { version = "0.9.0", features = ["serde"] }
 crokey = { version = "1.1.2", features = ["serde"] }
