--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ defmt = [
     "dep:ratatui-explorer",
     "dep:md5",
     "dep:notify",
+    "dep:native-dialog",
 ]
 defmt_watch = ["defmt", "dep:notify"]
 macros = []
@@ -59,6 +60,8 @@ itertools = "0.14.0"
 libc = "0.2.169"
 md5 = { version = "0.8.0", optional = true }
 memchr = "2.7.4"
+# using instead of rfd since it only adds ~20 deps, not ~100.
+native-dialog = { version = "0.9.0", optional = true }
 nom = "7.1"
 notify = { version = "8.0.0", features = [
     "crossbeam-channel",
