--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ derivative = "2.2.0"
 directories = "6.0.0"
 enum-rotate = "0.1.1"
 # enum_rotate = { path = "../enum-rotate" }
-espflash = { version = "4.0.0", optional = true, default-features = false, features = [
+espflash = { version = "4.0.1", optional = true, default-features = false, features = [
     "serialport",
 ] }
 # espflash = { path = "../espflash/espflash", optional = true, features = ["serialport"] }
@@ -101,13 +101,9 @@ tui-input = "0.11.1"
 unicode-width = "0.2.0"
 virtual-serialport = "0.1.3"
 
-# *sigh*
-# color-eyre uses this crate to indent error content
-# however, there is a bug (with a fix available since 2022!) that causes
-# newlines to *almost always* be printed with the "error index" as a prefix
-# this [+35, -5] commit fixed it, got approved, and then never merged in!
+# PR #18 finally got merged! But still not on crates.io yet.
 [patch.crates-io]
-indenter = { git = "https://github.com/ComunidadAylas/indenter", rev = "d3f419ffcfd1f24d24ddb9c2f65dbe84991dc559" }
+indenter = { git = "https://github.com/eyre-rs/indenter", rev = "9ed7e012c678ac58e3204d01af6e23696cf9795d" }
 
 [build-dependencies]
 copy_to_output = { git = "https://github.com/dougcooper/copy_to_output", rev = "270cffcb13b6e3716a3309515b20f0d70137561c" }
