--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,8 +43,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Install cargo-hack
-        uses: taiki-e/install-action@cargo-hack
       - name: Install Linux Dependencies
         run: sudo apt-get update && sudo apt-get install -y libudev-dev
+      - name: Setup Rust toolchain and cache
+        uses: actions-rust-lang/setup-rust-toolchain@v1.9.0
+      - name: Install cargo-hack
+        uses: taiki-e/install-action@cargo-hack
+      - name: Allow warnings in builds (for now)
+        run: echo "RUSTFLAGS=" >> $GITHUB_ENV
       - run: cargo hack check --feature-powerset --no-dev-deps
