--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,8 +34,9 @@ clap = { version = "4.5.40", features = ["derive"] }
 color-eyre = "0.6.3"
 # color-eyre = { path = "/home/tony/git/eyre/color-eyre/" }
 compact_str = { version = "0.9.0", features = ["serde"] }
-crokey = { version = "1.1.2", features = ["serde"] }
+crokey = { version = "=1.1.2", features = ["serde"] }
 crossbeam = "0.8.4"
+crossterm = "=0.28.1"
 # defmt-decoder = { version = "1.0.0", optional = true }
 defmt-decoder = { git = "https://github.com/knurling-rs/defmt", package = "defmt-decoder", optional = true, rev = "d52b9908c175497d46fc527f4f8dfd6278744f09" }
 defmt-parser = { git = "https://github.com/knurling-rs/defmt", package = "defmt-parser", optional = true, rev = "d52b9908c175497d46fc527f4f8dfd6278744f09" }
