Adding credit and version to port selection, change some defaults, little cleanup

--- a/example_configs/yap_keybinds.toml
+++ b/example_configs/yap_keybinds.toml
@@ -1,3 +1,5 @@
+# use --print-actions (-p) to see all built-in actions and more help!
+
 [keybindings]
 ctrl-w = "toggle-textwrap"
 ctrl-o = "toggle-dtr"
