--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "yap"
 repository = "https://github.com/nullstalgia/yap"
-version = "0.1.0"
+version = "0.1.0-pre.1"
 edition = "2024"
 
 [features]
