--- a/Cargo.toml
+++ b/Cargo.toml
@@ -130,6 +130,10 @@ self_update = { version = "0.42.0", features = [
     "compression-zip-bzip2",
     "compression-zip-deflate",
 ] }
+windows-sys = { version = "0.59", features = [
+    "Win32_Foundation",
+    "Win32_Globalization",
+] }
 
 [target.'cfg(unix)'.dependencies]
 self_update = { version = "0.42.0", features = ["compression-flate2"] }
