Forgot use statement, check Console Codepage, not Windows Shell Codepage

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -132,7 +132,7 @@ self_update = { version = "0.42.0", features = [
 ] }
 windows-sys = { version = "0.59", features = [
     "Win32_Foundation",
-    "Win32_Globalization",
+    "Win32_System_Console",
 ] }
 
 [target.'cfg(unix)'.dependencies]
