--- a/example_configs/macros/openshock.toml
+++ b/example_configs/macros/openshock.toml
@@ -1,4 +1,4 @@
-name = "OpenShock" ## name is optional, if missing, will use file name
+category = "OpenShock" ## category is optional, if missing, will use file name
 
 [[macro]]
 name = "Version"
@@ -14,8 +14,8 @@ content = "sysinfo"
 
 [[macro]]
 name = "Get Config (JSON)"
-content = "jsonconfig "
+content = "jsonconfig"
 
 [[macro]]
 name = "Get Config (Raw)"
-content = "rawconfig "
+content = "rawconfig"
