--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,12 +26,11 @@ jobs:
         uses: actions-rust-lang/setup-rust-toolchain@v1.9.0
       #- name: cargo fmt
       #  run: cargo fmt --all -- --check
-      #- name: Run Clippy
-      #  run: cargo clippy --all-targets --all-features
-      # TODO Remove this when releasing, I don't see a point in having this fail
-      # while I'm still in early days
-      - name: Allow warnings in builds (for now)
-        run: echo "RUSTFLAGS=" >> $GITHUB_ENV
+      - name: Run Clippy
+        run: cargo clippy --all-targets --all-features
+      # setup-rust-toolchain adds `-D warnings` automatically
+      # - name: Allow warnings in builds
+      #   run: echo "RUSTFLAGS=" >> $GITHUB_ENV
       - name: Build
         run: cargo build --verbose
       - name: Run Unit Tests
