--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,6 @@ jobs:
         uses: actions-rust-lang/setup-rust-toolchain@v1.9.0
       - name: Install cargo-hack
         uses: taiki-e/install-action@cargo-hack
-      - name: Allow warnings in builds (for now)
-        run: echo "RUSTFLAGS=" >> $GITHUB_ENV
+      # - name: Allow warnings in builds (for now)
+      #   run: echo "RUSTFLAGS=" >> $GITHUB_ENV
       - run: cargo hack check --feature-powerset --no-dev-deps
